# p1_quantfinance

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  Dockerfile  README.md  architecture_map_ch.md  audit_and_roadmap_ch.md  docker-compose.yml  pyproject.toml  quant_system_breakdown.md  readme_ch.md  requirements-lock.txt  walkthrough_ch.md
.github/workflows/: ci.yml
config/: settings.py
configs/: fomc_dates.json  strategies.json
docs/: DEPLOYMENT.md  GUIDE.md  SCHEDULING.md  USAGE.md
portfolios/: example.json
research_notes/: 2026-07-17-1min-ma-cross-cost-dominated.md  2026-07-17-buffer-parameter-degenerates-to-buy-and-hold.md  2026-07-17-frictionless-backtests-overstate.md  2026-07-17-lookback-100-survives.md  2026-07-17-momentum-beats-ma-cross-oos.md  2026-07-18-alpaca-moc-opg-orders.md  2026-07-18-gap-ai-interface.md  2026-07-18-gap-event-calendar.md  2026-07-18-gap-report-metrics.md  2026-07-18-gap-tradingview-ux.md  2026-07-18-measured-intraday-slippage-on-qqq-is-0-bps-avg.md  2026-07-18-tool-gap-scan-report-metrics-vs-quantconnect-and-quantstats.md  2026-07-18-tool-gap-scan-tradingview-style-chart-first-ux-we-lack.md  2026-07-19-gap-scan-24h-ai-trader-article-555-pdf.md  2026-07-19-gld-slow-momentum-as-a-second.md  README.md
scripts/: ci.ps1  daily_live.ps1  download_history.py  fomc_study.py  gap_analysis.py  trading.cmd  trading.ps1
src/quant/: __init__.py  cli.py  mcp_server.py  readapi.py
src/quant/backtest/: __init__.py  backtrader_engine.py  base.py  costs.py  metrics.py  optimize.py  plots.py  report.py  vectorbt_engine.py  walkforward.py
src/quant/core/: __init__.py  events.py  types.py
src/quant/data/: __init__.py  integrity.py  loaders.py  quality.py  timeframes.py
src/quant/execution/: __init__.py  alpaca_broker.py  base.py  journal.py  live_runner.py  paper_broker.py  scheduler.py  session.py
src/quant/ops/: __init__.py  drift.py  health.py  notify.py  oms.py  reconcile.py  report.py  tca.py
src/quant/portfolio/: __init__.py  portfolio.py
src/quant/research/: __init__.py  experiments.py  lifecycle.py  notes.py
src/quant/risk/: __init__.py  base.py  bracket.py  gate.py
src/quant/strategies/: __init__.py  base.py  ma_cross.py  momentum.py  registry.py  spec.py
src/quant/utils/: __init__.py  logging.py
tests/: test_alpaca_broker.py  test_bracket.py  test_cli.py  test_config.py  test_costs.py  test_drift.py  test_experiments.py  test_feeds_timeframe.py  test_gate.py  test_health.py  test_integrity.py  test_intraday.py  test_journal.py  test_lifecycle.py  test_live_brackets.py  test_live_runner.py  test_loaders.py  test_mcp_server.py  test_metrics.py  test_momentum_and_registry.py  test_notes.py  test_oms.py  test_ops.py  test_optimize.py  test_paper.py  test_plots.py  test_portfolio.py  test_quality.py  test_regression.py  test_report.py  test_retry.py  test_scheduler.py  test_smoke.py  test_storage.py  test_strategies.py  test_tca.py  test_timeframes.py  test_walkforward.py  test_web.py
(+14 files in other folders)
