[project]
name = "quant"
version = "0.1.0"
description = "Modular quantitative trading system (US equities/ETF) — research, backtest, paper execution."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # --- Data & broker (US equities/ETF) ---
    "alpaca-py>=0.21",          # live/paper data + paper trading
    "yfinance>=0.2.40",         # free EOD historical data for research
    # --- Data processing ---
    "pandas>=2.2,<3",           # vectorbt requires the 2.x line
    "numpy>=1.26",
    # --- Backtesting (dual engine) ---
    "vectorbt>=0.26",           # vectorized research / parameter sweeps
    "backtrader>=1.9.78.123",   # event-driven, live-like validation
    # --- Storage ---
    "pyarrow>=16",              # parquet historical store
    # --- Config / infra ---
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "loguru>=0.7",              # logging
    "typer>=0.12",              # CLI entrypoint
    "apscheduler>=3.10",        # scheduling / event loop
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "ipykernel>=6.29",         # notebooks
]
timescale = [
    "psycopg[binary]>=3.1",    # TimescaleDB / Postgres driver (optional storage backend)
]
web = [
    "fastapi>=0.109",          # read-only results dashboard API
    "uvicorn[standard]>=0.27",  # ASGI server for `quant web`
]

[project.scripts]
quant = "quant.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120        # matches the codebase's de-facto width (CLI help/echo strings)
target-version = "py311"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, UP pyupgrade. (Bugbear B is skipped:
# it false-flags typer's `=typer.Option(...)` defaults via B008.)
select = ["E", "F", "I", "W", "UP"]
# UP042 (str+Enum -> StrEnum) is intentionally NOT applied: StrEnum changes
# str(member) from 'OrderSide.BUY' to 'buy', a behavioral change on our domain enums.
ignore = ["UP042"]

[tool.mypy]
python_version = "3.11"
files = ["src", "config"]
# Pragmatic, not strict: catch real type errors without drowning in untyped
# third-party (pandas/vectorbt/alpaca/... ship no stubs) or pre-existing gaps.
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
filterwarnings = [
    # alpaca-py imports websockets.legacy (deprecated upstream) — nothing we can fix.
    "ignore:websockets.legacy is deprecated:DeprecationWarning",
    # starlette TestClient httpx deprecation (only when [web] is installed for tests).
    "ignore:Using `httpx` with `starlette.testclient`:Warning",
]
